--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.0",
+    "expo-asset": "~9.0.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
@@ -28,4 +29,4 @@
     "typescript": "^5.1.3"
   },
   "private": true
-} 
+}
