--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@aws-amplify/react-native": "^1.1.10",
@@ -29,6 +31,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.16.5",
+    "@testing-library/react-native": "^12.1.5",
+    "@types/jest": "^29.5.10",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-expo": "~50.0.0",
+    "react-test-renderer": "18.2.0",
     "@types/react": "~18.2.45",
     "typescript": "^5.1.3"
   },
