--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
+      - name: Run linter
+        run: npm run lint
       - name: Run tests
         run: npm test --silent
       - name: Upload coverage artifact
