--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@aws-amplify/react-native": "^1.1.10",
@@ -36,7 +37,10 @@
     "@testing-library/react-native": "^12.1.5",
     "@types/jest": "^29.5.10",
     "@types/react": "~18.2.45",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "babel-jest": "^29.7.0",
+    "eslint": "^9.30.1",
     "jest": "^29.7.0",
     "jest-expo": "~50.0.0",
     "react-test-renderer": "18.2.0",
