--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^7.3.21",
     "@react-navigation/stack": "^6.3.20",
     "aws-amplify": "^5.3.27",
     "expo": "~50.0.0",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native/eslint-config": "^0.80.1",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^12.1.5",
@@ -40,7 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.30.1",
+    "eslint": "^8.57.1",
     "jest": "^29.7.0",
     "jest-expo": "~50.0.0",
     "react-test-renderer": "18.2.0",
