--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "ci-check": "npm run lint && npm test"
   },
   "dependencies": {
     "@aws-amplify/react-native": "^1.1.10",
